--- a/planos.html
+++ b/planos.html
@@ -2,7 +2,7 @@
 <html>
     <html lang="pt-br"></html>
 <head>
-    <title>Calculadora de Preços de Elo</title>
+    <title>Akira Planos</title>
     <link rel="stylesheet" type="text/css" href="planos.css">
 </head>
 <body>
