--- a/elojob.html
+++ b/elojob.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Calculadora de Preços de Elo</title>
+    <title>Akira Jobs</title>
     <link rel="stylesheet" type="text/css" href="elojob.css">
 </head>
 <body>
